--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
 <h1>Hallo world v2</h1>
 
 
-<link type="application/json+oembed" href="https://owo.whats-th.is//e61180.json" />
+<link type="application/json+oembed" href="https://taciti.github.io/taciti/goa.json" />
