--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<meta name="og:title" content="Testing GoA"/>
+<meta name="og:title" content="Why to do PvP?
+•Necessary skills for some classes: Vigor, Caltrops, Warhorn, Purge
+•Whopping way to earn transmute crystals
+- Rewards of the worthy; gives geode with 4-20 transmute crystals once a day.
+- End of the campaign rewards; in 7 day campaign geode with 10 transmute crystals and in 30 day campaign geode with 50 crystals. 
+- If you end up with high spot on leaderboards you get another geode at the end of campaign
+•Daily conquest: One Gladiator proof daily. Combine 10 to Arena Gladiator helm, 30 emote and 50 Arena Gladiator costume. (helm ~200k, costume ~1,5mil) 
+•You can use AP earned from PvP to buy Akaviri and Militant Ordinator motifs. ( E.g swords current worth 70+k)
+•If you go all crazy and reach top 2% on leaderboards in winning alliance you receive 5 pieces of golden gear. 
+•Once you manage your first kills you become bloodthirsty and want to kill more."/>
 
 
 <h1>Hallo world v3</h1>
