--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<meta name="og:title" content="Why to do PvP?ojoojljljljldsjafja;djfljdflkjadlsfjlj"/>
+<meta name="og:title" content="Testing GoA v2"/>
 
 
-<h1>Hallo world v4</h1>
+<h1>Hallo world v5</h1>
 
 
 <link type="application/json+oembed" href="https://taciti.github.io/taciti/goa.json" />
